--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -92,7 +92,7 @@ $breakpoints:
         {
             $size1: $size1 + 3px;
             $size2: $size2 - 2px;
-            $offset: $offset + 6px;
+            $offset: $offset + 10px;
 
             gap: $offset;
 
@@ -114,6 +114,13 @@ $breakpoints:
 {
     grid-template-columns: 1fr;
 
+    .section-main_text
+    {
+        align-items: center;
+        max-width: 100vw;
+        text-align: center;
+    }
+
     @include media-min("desktop-up")
     {
         grid-template-columns: repeat(2, 1fr);
@@ -128,6 +135,13 @@ $breakpoints:
         {
             grid-column: 2;
             grid-row: 1;
+        }
+
+        .section-main_text
+        {
+            align-items: start;
+            width: 445px;
+            text-align: left;
         }
     }
 }
