--- a/scss/layouts/_section-title.scss
+++ b/scss/layouts/_section-title.scss
@@ -11,7 +11,7 @@
         z-index: -1;
         top: 0;
         width: 100%;
-        min-height: 100%;
+        height: 100vh;
         background-image: url(../assets/images/photos/image-header.jpg);
         background-repeat: no-repeat;
         background-position: center;
@@ -34,6 +34,11 @@
             text-transform: uppercase;
             text-align: center;
             letter-spacing: 8px;
+        }
+
+        img
+        {
+            width: 30px;
         }
     }
 }
