--- a/scss/layouts/section-main/_section-main.scss
+++ b/scss/layouts/section-main/_section-main.scss
@@ -16,20 +16,17 @@
 
     .section-main_text
     {
-        max-width: 100vw;
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
         padding-left: 5%;
         padding-right: 5%;
-        margin: 0;
+        margin: auto;
         @extend %main-size;
 
         h2
         {
             font-family: Fraunces;
-            text-align: center;
             color: $veryDarkDesaturatedBlue;
             margin-bottom: 40px;
             margin-top: 60px;
@@ -39,7 +36,6 @@
         {
             font-family: Barlow;
             font-size: 18px;
-            text-align: center;
             color: $darkGrayishBlue;
             font-weight: 800;
             line-height: 1.5;
